# dispatch

./: LICENSE.md  README.md  config.json  memory.json  memory.md  pyproject.toml
agent/: agent.py  completer.py  fancy_banner.py  main.py  paths.py  system_prompt.py
agent/cmd/: __init__.py  arg_completers.py  files.py  memory.py  plan.py  session.py
agent/tools/: __init__.py  files.py  memory.py  session.py  shell.py  web.py
